--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,15 @@ body{
     margin-right:10px;
 }
   
+.step {
+    position: relative;
+  }
+  .arrow {
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 20px solid #007bff;
+    margin: 10px auto;
+  }
+  
